--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Grupo Fixion Oficial - Chat en Tiempo Real</title>
 <style>
-:root { --border:#e5e7eb; --bg:#fafafa; --muted:#6b7280; --primary:#f63b3b; }
-body {  font-family: system-ui, Arial, sans-serif; margin:0; padding:0; background:#f0f4f8; }
+:root { --border:#e5e7eb; --bg:#fafafa; --muted:#6b7280; --primary:#3b82f6; }
+body { font-family: system-ui, Arial, sans-serif; margin:0; padding:0; background:#f0f4f8; }
 header {
   position: fixed; top:0; left:0; width:100%; height:60px;
   background:#fff; border-bottom:1px solid var(--border); display:flex;
@@ -16,14 +16,13 @@ header {
 header .header-left { display:flex; align-items:center; gap:8px; }
 header .header-left img { width:40px; height:40px; border-radius:8px; }
 header .header-left h1 { font-size:1.2rem; margin:0; color:var(--primary); }
-header .header-right { margin-right: 35px; display:flex; align-items:center; gap:12px; }
+header .header-right {   margin-right: 30px; display:flex; align-items:center; gap:12px; }
 header .header-right .avatar { width:36px; height:36px; border-radius:50%; border:1px solid var(--border); }
 header .header-right .name { font-weight:600; color:#333; }
 header .header-right .btn { padding:6px 10px; border:1px solid var(--border); border-radius:8px; background:#fff; cursor:pointer; transition:all 0.2s; }
 header .header-right .btn:hover { background:var(--primary); color:#fff; border-color:var(--primary); }
 
-main { padding-top:70px; max-width:720px; margin:0 auto;padding-right: 15px;
-    padding-left: 15px; }
+main { padding-top:70px; max-width:720px; margin:0 auto; }
 
 #chat { border:1px solid var(--border); background:#fff; height:400px; overflow-y:auto; padding:12px; border-radius:12px; scroll-behavior:smooth; margin:16px 0; }
 .msg { display:flex; gap:10px; padding:10px 8px; border-bottom:1px solid var(--border); animation:fadeIn 0.3s ease; }
@@ -55,22 +54,23 @@ main { padding-top:70px; max-width:720px; margin:0 auto;padding-right: 15px;
     object-fit: cover;
     border: 1px solid var(--border);
 }
-/* === VIDEO DE FONDO === */
-
 </style>
 </head>
 <body>
+
 <header>
   <div class="header-left">
-    <img src="./img/logo.png" alt="Grupo Fixion Logo">
+    <img src="https://i.imgur.com/2yAf7OH.png" alt="Grupo Fixion Logo">
     <h1>Grupo Fixion Oficial</h1>
   </div>
   <div class="header-right">
     <img id="user-photo" class="avatar" src="" alt="avatar" style="display:none;">
     <span id="user-name" class="name">No has iniciado sesión</span>
+    <button id="loginBtn" class="btn">Iniciar sesión con Google</button>
     <button id="logoutBtn" class="btn hidden">Cerrar sesión</button>
   </div>
 </header>
+
 
 <main>
   <div id="chat"></div>
